# PrimitiveRasterizer

./: .gitignore  CMakeLists.txt  README.md  config.h.in  debug_test_example.cpp  lgtm.yml  main.cpp  test_feature.cpp  voxel设计.vsdx
.github/workflows/: codeql.yml
3Party/eigen/include/eigen3/Eigen/src/IterativeLinearSolvers/: ConjugateGradient.h  LeastSquareConjugateGradient.h
3Party/linux-build/opencv-install/lib/: libopencv_calib3d.so.4.5.5  libopencv_features2d.so.4.5.5  libopencv_flann.so.4.5.5  libopencv_highgui.so.4.5.5  libopencv_imgcodecs.so.4.5.5  libopencv_ml.so.4.5.5  libopencv_objdetect.so.4.5.5  libopencv_photo.so.4.5.5  libopencv_stitching.so.4.5.5  libopencv_video.so.4.5.5  libopencv_videoio.so.4.5.5
3Party/opencv/x64/mingw/lib/: OpenCVConfig.cmake
debug_tool/: record_img.cpp  record_img.hpp  test_feature.cpp
googletest/: CMakeLists.txt  test1.cpp  test_draw_line_algorithm.cpp  time_comparation.cpp  time_comparation_2.cpp
src/: CMakeLists.txt  FP_util.hpp  Singleton.hpp  basic_matrix.cpp  basic_matrix.hpp  drawing_methods.cpp  drawing_methods.hpp  illuminant.hpp  image_io.cpp  image_io.hpp  obj_loader.cpp  obj_loader.hpp  precompile.h  rasterizer.cpp  rasterizer.hpp  rasterizer_config.h  rasterizer_view.cpp  rasterizer_view.hpp  shader.cpp  shader.hpp  triangle.cpp  triangle.hpp  util_define.hpp  util_func.hpp  utils.hpp
src/MVVM/model/: model_interface.cpp  model_interface.hpp
src/MVVM/viewmodel/: viewmodel.cpp  viewmodel.hpp  viewmodel_command.cpp  viewmodel_command.hpp
src/viewmodel/: model_interface.cpp  model_interface.hpp  viewmodel.cpp  viewmodel.hpp
src/voxel/: polygon.cpp  polygon.hpp
tutorial/: 0-cmake框架下项目的配置.md  1-HelloWorld-画点什么.md  2-三角形.md  3-重心坐标插值.md  README.md  TODO.md
tutorial/code_snapshot/: 1-appdix-straight_line.cpp  1-appdix-straight_line.hpp
unittest/: .gitignore  CMakeLists.txt  test1.cpp  test_3d.cpp  test_mesh2d.cpp
